<?xml version="1.0"?>
<project
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/xsd/maven-4.0.0.xsd"
        xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>hm.binkley.md</groupId>
    <artifactId>modern-java-practice-maven</artifactId>
    <version>0-SNAPSHOT</version>

    <properties>
        <!-- @formatter:off -->
        <dependency-check-maven.version>6.0.2</dependency-check-maven.version>
        <java.version>15</java.version>
        <junit.version>5.7.0</junit.version>
        <lombok.version>1.18.12</lombok.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <maven-versions-plugin.version>2.8.1</maven-versions-plugin.version>
        <mockito.version>3.5.13</mockito.version>
        <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
        <pitest-maven.version>1.5.2</pitest-maven.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
        <!-- @formatter:on -->
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <scope>test</scope>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <scope>test</scope>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${maven-versions-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest-maven.version}</version>
                <configuration>
                    <avoidCallsTo>
                        <avoidCallsTo>kotlin.jvm.internal</avoidCallsTo>
                    </avoidCallsTo>
                    <coverageThreshold>53</coverageThreshold>
                    <excludedClasses>
                        <excludedClass>hm.binkley.math.MainKt
                        </excludedClass>
                    </excludedClasses>
                    <excludedMethods>
                        <excludedMethod>byteValue</excludedMethod>
                        <excludedMethod>doubleValue</excludedMethod>
                        <excludedMethod>floatValue</excludedMethod>
                        <excludedMethod>intValue</excludedMethod>
                        <excludedMethod>longValue</excludedMethod>
                        <excludedMethod>shortValue</excludedMethod>
                    </excludedMethods>
                    <jvmArgs>
                        <jvmArg>-noverify</jvmArg>
                        <jvmArg>-XX:TieredStopAtLevel=1</jvmArg>
                    </jvmArgs>
                    <!-- TODO: How to make mutation testing happy? -->
                    <mutationThreshold>56</mutationThreshold>
                </configuration>
                <executions>
                    <execution>
                        <id>mutation-testing</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>mutationCoverage</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>${pitest-junit5-plugin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency-check-maven.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
